force-app/main/default/objects/Combo_Accesorio__c/Combo_Accesorio__c.object-meta.xml
<CustomObject>
    <label>Accesorio del combo</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Nombre de Accesorio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accesorios del combo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>