force-app/main/default/objects/Combo_Accesorio__c/fields/Accesorio__c.field-meta.xml
<CustomField>
    <fullName>Accesorio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accesorio</label>
    <referenceTo>Accesorios__c</referenceTo>
    <relationshipName>Combos_Accesorios</relationshipName>
    <type>Lookup</type>
</CustomField>