force-app/main/default/objects/Combo_Accesorio__c/fields/C_digo_de_Accesorio__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_Accesorio__c</fullName>
    <externalId>true</externalId>
    <label>Código de Accesorio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>