force-app/main/default/objects/Combo_Accesorio__c/fields/Combo__c.field-meta.xml
<CustomField>
    <fullName>Combo__c</fullName>
    <label>Combo</label>
    <referenceTo>Combo__c</referenceTo>
    <relationshipName>Combos_Accesorios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>