force-app/main/default/objects/Combo_Accesorio__c/fields/Disponibilidad__c.field-meta.xml
<CustomField>
    <fullName>Disponibilidad__c</fullName>
    <label>Disponibilidad</label>
    <length>10</length>
    <type>Text</type>
</CustomField>