force-app/main/default/objects/Combo_Accesorio__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <formula>Accesorio__r.Precio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>