force-app/main/default/objects/Combo_Accesorio__c/fields/Total_NIO__c.field-meta.xml
<CustomField>
    <fullName>Total_NIO__c</fullName>
    <formula>Total__c *1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total(NIO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>