force-app/main/default/objects/Combo_Accesorio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Descripci_n_del_accesorio__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>